--- a/initializr/index.html
+++ b/initializr/index.html
@@ -67,7 +67,7 @@
         <tbody>
             <tr>
                 <th>Angular</th>
-                <td>1000</td>
+                <td id='angular-stargazers'></td>
                 <td>99%</td>
                 <td>500</td>
                 <td></td>
@@ -144,15 +144,12 @@
 
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Adam Wilson 2016</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
         <script src="js/vendor/bootstrap.min.js"></script>
-
         <script src="js/main.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
