main data feeds now all make it to page. rendering popularity to dom. refactored ajax function into one function called with url argument.

--- a/initializr/index.html
+++ b/initializr/index.html
@@ -75,7 +75,7 @@
             </tr>
             <tr>
                 <th>React</th>
-                <td></td>
+                <td id='react-stargazers'></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -83,7 +83,7 @@
             </tr>
             <tr>
                 <th>Ember</th>
-                <td></td>
+                <td id='ember-stargazers'></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -91,7 +91,7 @@
             </tr>
             <tr>
                 <th>Vue</th>
-                <td></td>
+                <td id='vue-stargazers'></td>
                 <td></td>
                 <td></td>
                 <td></td>
