added last update stamp element using Date() object. forks now rendering to dom.

--- a/initializr/index.html
+++ b/initializr/index.html
@@ -48,6 +48,8 @@
       <div class="container">
         <h1>Framework Dashboard</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <!-- display time and date of last data update -->
+        <b>Last Update:&nbsp<span id='last-update'></span></b>
       </div>
     </div>
 
@@ -59,7 +61,7 @@
                 <th></th>
                 <th>Popularity</th>
                 <th>Issue Support</th>
-                <th>Commits/Forks</th>
+                <th>Forks</th>
                 <th>wappalyzer</th>
                 <th>searches</th>
             </tr>
@@ -68,8 +70,8 @@
             <tr>
                 <th>Angular</th>
                 <td id='angular-stargazers'></td>
-                <td>99%</td>
-                <td>500</td>
+                <td></td>
+                <td id='angular-forks'></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -77,7 +79,7 @@
                 <th>React</th>
                 <td id='react-stargazers'></td>
                 <td></td>
-                <td></td>
+                <td id='react-forks'></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -85,7 +87,7 @@
                 <th>Ember</th>
                 <td id='ember-stargazers'></td>
                 <td></td>
-                <td></td>
+                <td id='ember-forks'></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -93,7 +95,7 @@
                 <th>Vue</th>
                 <td id='vue-stargazers'></td>
                 <td></td>
-                <td></td>
+                <td id='vue-forks'></td>
                 <td></td>
                 <td></td>
             </tr>
